# crm_service

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  continuation_agent_script.md  current_agent_task_status.json  docker-compose.test.yml  docker-compose.yml  dy_crm_state.json  error_handling_implementation.md  execution_report.md  main_api.py  pyproject.toml  pytest.ini  requirements.txt  test.db
app/core/: celery_app.py  config.py  db.py  logging.py  telemetry.py
app/util/: idempotency.py  jwt_util.py  liquibase.py
design/: DYNO CRM Analysis.htm  crm-service-openapi_v3.yaml  pipeline_schema.sql
design/DYNO CRM Analysis_files/: js  proxy.html  saved_resource.html
docker/: docker-compose.test.yml
docker/otel/: otel-collector-config.yml
docker/postgres/: init-database.sql
docs/: openapi.json
migrations/liquibase/: changelog-root.xml  docker-liquibase.properties  liquibase.properties  test-liquibase.properties
migrations/liquidbase/: activity.sql  association.sql  company.sql  contact.sql  db.changelog-master.xml  deal.sql  docker-liquibase.properties  list.sql  list_membership.sql  pipeline.sql  pipeline_stage.sql  test-liquibase.properties
tests/: conftest.py  test_activity_routes.py  test_association_routes.py  test_automation_action_routes.py  test_celery_config.py  test_common_service_db_errors.py  test_company.py  test_contact.py  test_deal_routes.py  test_group_profile_routes.py  test_inbound_channel.py  test_kb_category_routes.py  test_kb_section_routes.py  test_lead_routes.py  test_list_membership_routes.py  test_list_routes.py  test_models_import.py  test_pg_jsonb.py  test_pipeline_routes.py  test_pipeline_stage_routes.py  test_producers.py  test_record_watcher_routes.py  test_sla_routes.py  test_stage_history_routes.py  test_support_macros.py  test_support_tenant_shadows.py  test_support_views.py  test_telemetry.py  test_ticket_assignment_audit_nested_routes.py  test_ticket_attachment_nested_routes.py  test_ticket_field_def_routes.py  test_ticket_field_value_nested_routes.py  test_ticket_form_field_routes.py  test_ticket_form_routes.py  test_ticket_message_nested_routes.py  test_ticket_nested_routes.py  test_ticket_reporting_admin_nested_routes.py  test_ticket_reporting_nested_routes.py  test_ticket_routes.py  test_ticket_sla_state_routes.py  (+2 more)
tests/api/: test_automation_actions_routes.py  test_record_watcher_routes.py
tests/domain/: test_automation_action_execution_service.py  (+3 more)
(+345 files in other folders)
